sync from `sakura-ryoko/minihud`