@@ -166,8 +166,8 @@ public class ShapeLineBlock extends ShapeBlocky
 
         tracer.iterateAllPositions(this.getLinePositionCollector(positions));
 
-        RenderObjectBase renderQuads = this.renderObjects.get(0);
-        BUFFER_1.begin(renderQuads.getGlMode(), VertexFormats.POSITION_COLOR);
+        RenderObjectBase renderQuads = this.renderObjects.getFirst();
+        BUFFER_1 = TESSELLATOR_1.begin(renderQuads.getGlMode(), VertexFormats.POSITION_COLOR);
 
         if (this.getCombineQuads())
         {
