@@ -56,8 +56,8 @@ public class ShapeSphereBlocky extends ShapeCircleBase
 
         SphereUtils.collectSpherePositions(positionConsumer, test, centerPos, (int) this.getTotalRadius());
 
-        RenderObjectBase renderQuads = this.renderObjects.get(0);
-        BUFFER_1.begin(renderQuads.getGlMode(), VertexFormats.POSITION_COLOR);
+        RenderObjectBase renderQuads = this.renderObjects.getFirst();
+        BUFFER_1 = TESSELLATOR_1.begin(renderQuads.getGlMode(), VertexFormats.POSITION_COLOR);
 
         if (this.getCombineQuads())
         {
